--- a/style.css
+++ b/style.css
@@ -1,1 +1,5 @@
-
+/* --Fonts--*/
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;800&display=swap');
+*{
+    font-family: 'Raleway', sans-serif;
+}
