--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@
     font-family: 'Raleway', sans-serif;
     margin: 0;
     padding: 0;
+    color: white;
+}
+/* --first page*/
+#main_first{
+    width: 100%;
+    height: 750px;
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("images/first.jpg");
+    background-position:center;
+  background-repeat: no-repeat;
+  background-size: cover;
+    
 }
 /* --header--*/
 #header {
@@ -11,19 +22,50 @@
     display: flex;
     justify-content: space-between;
     gap: 100px;
-    margin-top:15px;
 }
 #logo {
     font-size: 2rem;
+    padding: 1rem;
+    color: orangered;
+}
+/* --navbar--*/
+#navbar{
+    margin-right: 170px;
 }
 #navbar>ul {
     width: 40%;
     list-style: none;
     display: flex;
     justify-content: space-between;
-    gap: 100px;
-    margin-right: 200px;
+    gap: 120px;
+    padding: 30px;
 }
 #navbar>ul>li>a {
     text-decoration: none;
+    color: white;
+    font-weight: 600;
+    font-size: 1.3rem;
+    transition: .5s;
+}
+#navbar>ul>li>a:hover {
+    color: red;
+    font-weight: 800;
+}
+/* --intro--*/
+#intro {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+#intro_text {
+    text-align: left;
+    margin-right: 40px;
+}
+#intro_text>h1 {
+    font-size: 3rem;
+}
+#intro_text>p {
+    font-size: 1.2rem;
 }
