--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* --Fonts--*/
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
 *{
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     color: white;
@@ -10,11 +10,7 @@
 #main_first{
     width: 100%;
     height: 750px;
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("images/first.jpg");
-    background-position:center;
-  background-repeat: no-repeat;
-  background-size: cover;
-    
+    background-image: radial-gradient(circle, #122542, #0a213a, #051e31, #031928, #001520);
 }
 /* --header--*/
 #header {
@@ -26,46 +22,64 @@
 #logo {
     font-size: 2rem;
     padding: 1rem;
-    color: orangered;
+    color: red;
 }
 /* --navbar--*/
 #navbar{
     margin-right: 170px;
 }
 #navbar>ul {
-    width: 40%;
+    width: 100%;
     list-style: none;
     display: flex;
-    justify-content: space-between;
-    gap: 120px;
-    padding: 30px;
+    margin-top: 30px;
 }
 #navbar>ul>li>a {
     text-decoration: none;
     color: white;
     font-weight: 600;
-    font-size: 1.3rem;
+    font-size: 1rem;
     transition: .5s;
+    width: 100%;
+    padding: 50px;
 }
 #navbar>ul>li>a:hover {
     color: red;
-    font-weight: 800;
 }
 /* --intro--*/
 #intro {
     display: flex;
     height: 100%;
     width: 100%;
-    justify-content: center;
-    align-items: center;
+    margin-top: 200px;
+    margin-left: 200px;
 }
 #intro_text {
     text-align: left;
-    margin-right: 40px;
+    width: 450px;
 }
 #intro_text>h1 {
-    font-size: 3rem;
+    font-size: 48px;
+    line-height: 50px;
 }
 #intro_text>p {
-    font-size: 1.2rem;
+    font-size: 16px;
+    margin-top: 20px;
+}
+#intro_img {
+    width: 520px;
+    height: 250px;
+    margin-left: 200px;
+}
+#intro_btn {
+    margin-top: 20px;
+    width:90px;
+    height:30px;
+    background: #0400ff;
+    border: none;
+    border-radius: 7px;
+}
+#intro_btn:hover {
+    cursor: pointer;
+    background-color: #0000e8;
 }
