--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     width: 100%;
     height: 750px;
     background-image: radial-gradient(circle, #122542, #0a213a, #051e31, #031928, #001520);
+    overflow-x : hidden;
 }
 /* --header--*/
 #header {
@@ -24,6 +25,7 @@
     padding: 1rem;
     color: red;
 }
+
 /* --navbar--*/
 #navbar{
     margin-right: 170px;
@@ -57,6 +59,7 @@
 #intro_text {
     text-align: left;
     width: 450px;
+    margin-right: 200px;
 }
 #intro_text>h1 {
     font-size: 48px;
@@ -67,17 +70,18 @@
     margin-top: 20px;
 }
 #intro_img {
-    width: 520px;
+    width: 500px;
     height: 250px;
-    margin-left: 200px;
+    border-radius: 8px;
 }
 #intro_btn {
     margin-top: 20px;
-    width:90px;
-    height:30px;
+    width:105px;
+    height:35px;
     background: #0400ff;
     border: none;
     border-radius: 7px;
+    font-weight: 600;
 }
 #intro_btn:hover {
     cursor: pointer;
